--- a/package.json
+++ b/package.json
@@ -15,10 +15,13 @@
     "@ant-design/pro-components": "^2.4.14",
     "@next/font": "^13.4.1",
     "@svgr/webpack": "6.2.1",
+    "@types/aos": "^3.0.4",
     "@types/node": "18.16.1",
     "@types/react": "18.2.0",
     "@types/react-dom": "18.2.1",
+    "animate.css": "^4.1.1",
     "antd": "^5.4.7",
+    "aos": "^2.3.4",
     "dayjs": "^1.11.8",
     "i18next": "22.4.14",
     "next": "13.3.1",
@@ -32,7 +35,8 @@
     "sharp": "0.31.3",
     "swiper": "^10.0.3",
     "typescript": "^5.0.4",
-    "webpack": "5.78.0"
+    "webpack": "5.78.0",
+    "wow.js": "^1.2.2"
   },
   "devDependencies": {
     "@svgr/webpack": "6.2.1",
