--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "antd": "^5.4.7",
     "aos": "^2.3.4",
     "dayjs": "^1.11.8",
+    "framer-motion": "^10.16.4",
     "i18next": "22.4.14",
     "next": "13.3.1",
     "next-i18next": "13.2.2",
