--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@svgr/webpack": "6.2.1",
     "@types/aos": "^3.0.4",
     "@types/node": "18.16.1",
+    "@types/nodemailer": "^6.4.11",
     "@types/react": "18.2.0",
     "@types/react-dom": "18.2.1",
     "animate.css": "^4.1.1",
@@ -27,6 +28,7 @@
     "i18next": "22.4.14",
     "next": "13.3.1",
     "next-i18next": "13.2.2",
+    "nodemailer": "^6.9.6",
     "rc-resize-observer": "^1.3.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -34,6 +36,7 @@
     "react-i18next": "12.2.0",
     "sass": "^1.62.1",
     "sharp": "0.31.3",
+    "sweetalert2": "^11.7.32",
     "swiper": "^10.0.3",
     "typescript": "^5.0.4",
     "webpack": "5.78.0",
