--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "animate.css": "^4.1.1",
     "antd": "^5.4.7",
     "aos": "^2.3.4",
+    "axios": "^1.7.7",
     "dayjs": "^1.11.8",
     "framer-motion": "^10.16.4",
     "i18next": "22.4.14",
@@ -34,6 +35,9 @@
     "react-dom": "18.2.0",
     "react-highlight-words": "^0.20.0",
     "react-i18next": "12.2.0",
+    "react-icons": "^5.3.0",
+    "react-query": "^3.39.3",
+    "react-query-devtools": "^2.6.3",
     "sass": "^1.62.1",
     "sharp": "0.31.3",
     "sweetalert2": "^11.7.32",
